Fixing issue in landing pages

--- a/shop.html
+++ b/shop.html
@@ -804,41 +804,21 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                                 <div class="footer-box">
-                                    <h3>About Company</h3>
-                                    <p>Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim dignissim. Suspen disse at eros tempus, congue metus ac consequat.</p>
-                                    <p>Fusce sit amet urna feugiat.</p>
+                                    <h3>About Us</h3>
+                                    <p>GREEN STUFF PVT LTD is a leading plants and landscaping company associated with UAE (Dubai) and Sri Lanka with the most significant collection of plants and numerous garden services and accessories. We always provide excellent service with a knowledgeable and creative staff. Mainly, we export the highest-quality plants with many years of experience to highlight the greenery identity of the country.
+                                         In addition, our team is ready to create and landscape your garden by fulfiling your dream a reality.</p>
                                     <ul class="footer-social">
-                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://www.facebook.com/greenstuffpvtltd/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://twitter.com/GreenStufflk" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        <li><a href="" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://www.instagram.com/greenstuffpvtltd/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://www.pinterest.com/greenstufflk" target="_blank"><i class="fa fa-pinterest"  aria-hidden="true"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                                 <div class="footer-box">
-                                    <h3>Twitter Feed</h3>
-                                    <ul class="twitter-feed">
-                                        <li>
-                                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                                            <p>Looking for an awesome CREATIVE WordPress Theme? Esquise  run even better.</p>
-                                            <a href="#">http://t.co/0WWEMQEQ48</a>
-                                            <p><span>3 Days ago</span></p>
-                                        </li>
-                                        <li>
-                                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                                            <p>Looking for an awesome CREATIVE WordPress Theme? Esquise  run even better.</p>
-                                            <a href="#">http://t.co/0WWEMQEQ48</a>
-                                            <p><span>3 Days ago</span></p>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                                <div class="footer-box">
-                                    <h3>Flickr Photos</h3>
+                                    <h3>Gallery</h3>
                                     <ul class="flickr-photos">
                                         <li><a href="#"><img class="img-responsive" src="img/footer/flickr-1.jpg" alt="flickr1"></a></li>
                                         <li><a href="#"><img class="img-responsive" src="img/footer/flickr-2.jpg" alt="flickr2"></a></li>
@@ -846,6 +826,9 @@
                                         <li><a href="#"><img class="img-responsive" src="img/footer/flickr-4.jpg" alt="flickr4"></a></li>
                                         <li><a href="#"><img class="img-responsive" src="img/footer/flickr-5.jpg" alt="flickr5"></a></li>
                                         <li><a href="#"><img class="img-responsive" src="img/footer/flickr-6.jpg" alt="flickr6"></a></li>
+                                        <li><a href="#"><img class="img-responsive" src="img/footer/flickr-7.jpg" alt="flickr4"></a></li>
+                                        <li><a href="#"><img class="img-responsive" src="img/footer/flickr-8.jpg" alt="flickr5"></a></li>
+                                        <li><a href="#"><img class="img-responsive" src="img/footer/flickr-9.jpg" alt="flickr6"></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -853,9 +836,13 @@
                                 <div class="footer-box">
                                     <h3>Contact US</h3>
                                     <ul class="corporate-address">
-                                        <li><i class="fa fa-phone" aria-hidden="true"></i>(01) 800 433 633</li>
-                                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="https://www.radiustheme.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ec85828a83ac8b9e89898280858a89c28f8381">[email&#160;protected]</a></li>
+                                        <li><i class="fa fa-phone" aria-hidden="true"></i>(+94) 11 211 9733</li>
+                                        <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#" class="text-white"> 214/a Sudarshana Mawatha, Malabe 10115 </a></li>
                                     </ul>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <div class="footer-box">
                                     <div class="newsletter-area">
                                         <h3>Subcribe</h3>
                                         <div class="input-group stylish-input-group">
@@ -875,10 +862,10 @@
                 <div class="footer-area-bottom">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <p>&copy; 2016 greenlife All Rights Reserved. &nbsp; Designed by<a target="_blank" href="https://www.radiustheme.com/" rel="nofollow"> RadiusTheme</a>.com</p>
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+                                <p>&copy; 2022 greenstufflk All Rights Reserved.</p>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                 <ul class="payment-method">
                                     <li><a href="#"><img alt="payment-method" src="img/payment-method1.jpg"></a></li>
                                     <li><a href="#"><img alt="payment-method" src="img/payment-method2.jpg"></a></li>
