Update index page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title> Green Stuff | Home </title>
-        <meta name="description" content="">
+        <title> Green Agventure Lanka | Home</title>
+        <meta name="description" content="Green Stuff Pvt Ltd - Leading plant exporting and landscaping company in Sri Lanka. We export plants, provide landscaping, horticulture, vertical gardening, rooftop gardening, and micro-irrigation services.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -52,24 +52,6 @@
             chatbox.setAttribute("page_id", "108953347488055");
             chatbox.setAttribute("attribution", "biz_inbox");
         </script>
-        <!-- Your SDK code -->
-        <script>
-            window.fbAsyncInit = function() {
-                FB.init({
-                xfbml            : true,
-                version          : 'v14.0'
-                });
-            };
-
-            (function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) return;
-                js = d.createElement(s); js.id = id;
-                js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));
-        </script>
-        <div id="fb-root"></div>
         <div class="wrapper-area">
             <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -109,19 +91,17 @@
                             <div class="row">
                                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
                                     <div class="logo-area">
-                                        <div class="logo-area">
-                                            <a href="index.html"><img class="img-responsive" src="img/logo.png" alt="logo"></a>
-                                        </div>
+                                        <a href="index.html"><img class="img-responsive" src="img/logo.png" alt="Green Stuff Logo"></a>
                                     </div>
                                 </div>
                                 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
                                     <div class="main-menu-area">
                                         <nav>
                                             <ul>
-                                                <li><a href="index.html">Home</a></li>
-                                                <li><a href="">Services</a></li>
-                                                <li><a href="">About Us</a></li>
-                                                <li><a href="#">Contact</a></li>
+                                            <li><a href="index.html">Home</a></li>
+                                                <li><a href="services.html">Services</a></li>
+                                                <li><a href="about.html">About Us</a></li>
+                                                <li><a href="contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -379,7 +359,7 @@
                         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
                             <div  class="ask-question-right">
                                 <h2 class="title-bar50">Contact Us</h2>
-                                <form id="getQuote-form" action="https://formsubmit.co/greenstufflk@gmail.com" method="POST" />
+                                <form id="getQuote-form" action="https://formsubmit.co/greenstufflk@gmail.com" method="POST">
                                     <fieldset>
                                         <div class="row">
                                             <div class="col-sm-12">
@@ -442,7 +422,7 @@
                                     <ul class="footer-social">
                                         <li><a href="https://www.facebook.com/greenstuffpvtltd/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                         <li><a href="https://twitter.com/GreenStufflk" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/greenstufflk/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                                         <li><a href="https://www.instagram.com/greenstuffpvtltd/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                         <li><a href="https://www.pinterest.com/greenstufflk" target="_blank"><i class="fa fa-pinterest"  aria-hidden="true"></i></a></li>
                                     </ul>
@@ -495,7 +475,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                                <p>&copy; 2022 greenstufflk All Rights Reserved.</p>
+                                <p>&copy; <script>document.write(new Date().getFullYear())</script> greenstufflk All Rights Reserved.</p>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                 <ul class="payment-method">
