--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title> Green Agventure Lanka | Home</title>
-        <meta name="description" content="Green Stuff Pvt Ltd - Leading plant exporting and landscaping company in Sri Lanka. We export plants, provide landscaping, horticulture, vertical gardening, rooftop gardening, and micro-irrigation services.">
+        <title>Green Agventure Lanka | Home</title>
+        <meta name="description" content="Green Agventure Lanka Pvt Ltd - Leading plant exporting and landscaping company in Sri Lanka. We export plants, provide landscaping, horticulture, vertical gardening, rooftop gardening, and micro-irrigation services.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -289,7 +289,7 @@
                 <!-- Contact Banner Area Start Here -->
             <div class="contact-banner-area">
                 <div class="container">
-                        <h2>Creat Your<span> Beautiful Garden</span> With Us!<br/><span> Please Call <a href="">(+94) 11 211 9733</a> </span> </h2>
+                        <h2>Creat Your<span> Beautiful Garden</span> With Us!<br/><span> Please Call <a href="tel:+94112119733">(+94) 11 211 9733</a> </span> </h2>
                         <a href="#contactus-tab" class="btn-contact btn-lg">Contact Us</a>
                     </div>
                 </div>
@@ -448,7 +448,7 @@
                                 <div class="footer-box">
                                     <h3>Contact US</h3>
                                     <ul class="corporate-address">
-                                        <li><i class="fa fa-phone" aria-hidden="true"></i><a href="">(+94) 11 211 9733</a></li>
+                                        <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+94112119733">(+94) 11 211 9733</a></li>
                                         <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#" class="text-white"> 214/a Sudarshana Mawatha, Malabe 10115 </a></li>
                                     </ul>
                                 </div>
