--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title> Green Agventure Lanka | Home</title>
-        <meta name="description" content="Green Stuff Pvt Ltd - Leading plant exporting and landscaping company in Sri Lanka. We export plants, provide landscaping, horticulture, vertical gardening, rooftop gardening, and micro-irrigation services.">
+        <meta name="description" content="Green Agventure Lanka Pvt Ltd - Leading plant exporting and landscaping company in Sri Lanka. We export plants, provide landscaping, horticulture, vertical gardening, rooftop gardening, and micro-irrigation services.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -91,7 +91,7 @@
                             <div class="row">
                                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
                                     <div class="logo-area">
-                                        <a href="index.html"><img class="img-responsive" src="img/logo.png" alt="Green Stuff Logo"></a>
+                                        <a href="index.html"><img class="img-responsive" src="img/logo.png" alt="Green Agventure Lanka Logo"></a>
                                     </div>
                                 </div>
                                 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
@@ -146,7 +146,7 @@
                         <div class="slider-content s-tb slider-1">
                             <div class="title-container s-tb-c">
                                 <h1 class="title1">BRING <span>NATURE</span> INTO <span> YOUR HOME</span></h1>
-                                <p>Green stuff pvt ltd is a landscaping company based in Sri Lanka and United Arab Emirates.</p>
+                                <p>Green Agventure Lanka pvt ltd is a landscaping company based in Sri Lanka and United Arab Emirates.</p>
                                 <p>export of plants and agriculture based products to the middle east.</p>
                                 <div class="slider-btn-area">
                                     <a href="#" class="btn-slider-fill">Read More</a>
@@ -159,7 +159,7 @@
                         <div class="slider-content s-tb slider-2">
                             <div class="title-container s-tb-c">
                                 <h1 class="title1">BRING <span>NATURE</span> INTO <span> YOUR HOME</span></h1>
-                                <p>Green stuff pvt ltd is a landscaping company based in Sri Lanka and United Arab Emirates.</p>
+                                <p>Green Agventure Lanka pvt ltd is a landscaping company based in Sri Lanka and United Arab Emirates.</p>
                                 <p>export of plants and agriculture based products to the middle east.</p>
                                 <div class="slider-btn-area">
                                     <a href="#" class="btn-slider-fill">Read More</a>
@@ -172,7 +172,7 @@
                         <div class="slider-content s-tb slider-3">
                             <div class="title-container s-tb-c">
                                 <h1 class="title1">BRING <span>NATURE</span> INTO <span> YOUR HOME</span></h1>
-                                <p>Green stuff pvt ltd is a landscaping company based in Sri Lanka and United Arab Emirates.</p>
+                                <p>Green Agventure Lanka pvt ltd is a landscaping company based in Sri Lanka and United Arab Emirates.</p>
                                 <p>export of plants and agriculture based products to the middle east.</p>
                                 <div class="slider-btn-area">
                                     <a href="#" class="btn-slider-fill">Read More</a>
@@ -253,9 +253,9 @@
                     <div class="row">
                         <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
                             <div class="history-box">
-                                <h2 class="title-bar50">Welcome Green Stuff Sri Lanka</h2>
+                                <h2 class="title-bar50">Welcome Green Agventure Sri Lanka</h2>
                                 <p>
-                                    GREEN STUFF PVT LTD is a leading plant exporting and landscaping company in Sri Lanka associated with UAE (Dubai). With many years of experience and the finest staff, we provide our customers with excellent service. <br/>
+                                    Green Agventure Lanka PVT LTD is a leading plant exporting and landscaping company in Sri Lanka associated with UAE (Dubai). With many years of experience and the finest staff, we provide our customers with excellent service. <br/>
                                     We are the most modern, knowledgeable team with an enormous collection of high-quality plants. We trade them internationally to manifest our green values to the world.  <br/>
                                     We have many garden services to make your dream garden a reality. Our team is ready to create a unique and pleasing environment around you, not only with the plants but also with the remarkable collection of interlocking stones. Our landscaping art will make your land the most creative and attractive garden intertwined with the environment.
                                     </p>
@@ -416,7 +416,7 @@
                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                                 <div class="footer-box">
                                     <h3>About Us</h3>
-                                    <p>GREEN STUFF PVT LTD is a leading plants and landscaping company associated with UAE (Dubai) and Sri Lanka with the most significant collection of plants and numerous garden services and accessories. We always provide excellent service with a knowledgeable and creative staff. Mainly, we export the highest-quality plants with many years of experience to highlight the greenery identity of the country.
+                                    <p>Green Agventure Lanka PVT LTD is a leading plants and landscaping company associated with UAE (Dubai) and Sri Lanka with the most significant collection of plants and numerous garden services and accessories. We always provide excellent service with a knowledgeable and creative staff. Mainly, we export the highest-quality plants with many years of experience to highlight the greenery identity of the country.
                                          In addition, our team is ready to create and landscape your garden by fulfiling your dream a reality.</p>
                                     <ul class="footer-social">
                                         <li><a href="https://www.facebook.com/greenstuffpvtltd/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
