--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     <div class="header-top-right">
                                         <ul>
                                             <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#"> 214/a Sudarshana Mawatha, Malabe 10115 </a></li>
-                                            <li><i class="fa fa-phone" aria-hidden="true"></i><a href="Phone:+94112119733"> (+94) 11 211 9733 </a></li>
+                                            <li><i class="fa fa-phone" aria-hidden="true"></i><a href="Phone:+94112119733"> (+94) 77 952 9268 </a></li>
                                             <li><button class="btn-submit" type="submit">Contact Us </button></li>
                                         </ul>
                                     </div>
@@ -288,7 +288,7 @@
                 <!-- Contact Banner Area Start Here -->
             <div class="contact-banner-area">
                 <div class="container">
-                        <h2>Creat Your<span> Beautiful Garden</span> With Us!<br/><span> Please Call <a href="">(+94) 11 211 9733</a> </span> </h2>
+                        <h2>Creat Your<span> Beautiful Garden</span> With Us!<br/><span> Please Call <a href="">(+94) 77 952 9268</a> </span> </h2>
                         <a href="#contactus-tab" class="btn-contact btn-lg">Contact Us</a>
                     </div>
                 </div>
@@ -309,7 +309,7 @@
                                         </a>
                                         <div class="media-body">
                                             <h3><a href="#">Available 24/7</a></h3>
-                                            <p>We are available 24 hours day 7 days a week. Call our hotline (+94) 11 211 9733</p>
+                                            <p>We are available 24 hours day 7 days a week. Call our hotline (+94) 77 952 9268</p>
                                         </div>
                                     </div>
                                 </div>
@@ -447,7 +447,7 @@
                                 <div class="footer-box">
                                     <h3>Contact US</h3>
                                     <ul class="corporate-address">
-                                        <li><i class="fa fa-phone" aria-hidden="true"></i><a href="">(+94) 11 211 9733</a></li>
+                                        <li><i class="fa fa-phone" aria-hidden="true"></i><a href="">(+94) 77 952 9268</a></li>
                                         <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#" class="text-white"> 214/a Sudarshana Mawatha, Malabe 10115 </a></li>
                                     </ul>
                                 </div>
@@ -474,7 +474,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                                <p>&copy; <script>document.write(new Date().getFullYear())</script> greenstufflk All Rights Reserved.</p>
+                                <p>&copy; <script>document.write(new Date().getFullYear())</script> Green Agventure Lanka All Rights Reserved.</p>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                 <ul class="payment-method">
@@ -521,6 +521,4 @@
         <!-- Custom Js -->
         <script src="js/main.js"></script>  
     </body>
-
-<!-- Mirrored from www.radiustheme.com/demo/html/greenlife/greenlife/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 16 May 2022 05:53:12 GMT -->
 </html>
