--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <div class="service-box margin-b-a-tab">
                                 <span><i class="fa fa-tree" aria-hidden="true"></i></span>
-                                <h2>PLANT EXPORT</h2>
+                                <h2>GARDENING</h2>
                                 <p>Dorem ipsum dolor sit amet, consectetur elit. Curabitur euismod enim a metus adipiscing aliquam</p>
                                 <a class="btn-read-more-h-b" href="#">Read More</a>
                             </div>
@@ -199,7 +199,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <div class="service-box margin-b-a-tab">
                                 <span><i class="fa fa-tree" aria-hidden="true"></i></span>
-                                <h2>LANDSCAPING</h2>
+                                <h2>MICRO-IRRIGATION </h2>
                                 <p>Whether you are looking for a simple garden or a full wide-scale landscaping project with landscape
                                 design services</p>
                                 <a class="btn-read-more-h-b" href="#">Read More</a>
@@ -208,7 +208,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <div class="service-box margin-b-a-tab">
                                 <span><i class="fa fa-tree" aria-hidden="true"></i></span>
-                                <h2>HORTICULTURE</h2>
+                                <h2>LANDSCAPING </h2>
                                 <p>Due to long hours in the office and longer commute times, we’re spending more time indoors and
                                    away from ..</p>
                                 <a class="btn-read-more-h-b" href="#">Read More</a>
@@ -237,7 +237,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <div class="service-box margin-b-a-tab">
                                 <span><i class="fa fa-tree" aria-hidden="true"></i></span>
-                                <h2>MICRO-IRRIGATION</h2>
+                                <h2>INDOOR GARDENING</h2>
                                 <p>Drip Irrigation System, is an incredibly efficient watering method that slowly delivers
                                     water directly..
                                 </p>
