--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                     <div class="header-top-right">
                                         <ul>
-                                            <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#"> 214/a Sudarshana Mawatha, Malabe 10115 </a></li>
+                                            <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#"> 60/3A 9th Ln, Sri Jayawardenepura Kotte </a></li>
                                             <li><i class="fa fa-phone" aria-hidden="true"></i><a href="Phone:+94112119733"> (+94) 77 952 9268 </a></li>
                                             <li><button class="btn-submit" type="submit">Contact Us </button></li>
                                         </ul>
@@ -448,7 +448,7 @@
                                     <h3>Contact US</h3>
                                     <ul class="corporate-address">
                                         <li><i class="fa fa-phone" aria-hidden="true"></i><a href="">(+94) 77 952 9268</a></li>
-                                        <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#" class="text-white"> 214/a Sudarshana Mawatha, Malabe 10115 </a></li>
+                                        <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#" class="text-white"> 60/3A 9th Ln, Sri Jayawardenepura Kotte </a></li>
                                     </ul>
                                 </div>
                             </div>
