update 5th task

--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                                 <div class="footer-box">
                                     <h3>About Us</h3>
-                                    <p>Green Agventure Lanka PVT LTD is a leading plants and landscaping company associated with UAE (Dubai) and Sri Lanka with the most significant collection of plants and numerous garden services and accessories. We always provide excellent service with a knowledgeable and creative staff. Mainly, we export the highest-quality plants with many years of experience to highlight the greenery identity of the country.
-                                         In addition, our team is ready to create and landscape your garden by fulfiling your dream a reality.</p>
+                                    <p> Our vision is to spread the value of nature and heal human lives by distributing the best green products worldwide.
+                                        And to become the best plant export and landscaping company in Sri Lanka.</p>
                                     <ul class="footer-social">
                                         <li><a href="https://www.facebook.com/greenstuffpvtltd/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                         <li><a href="https://twitter.com/GreenStufflk" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
