--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                                         <nav>
                                             <ul>
                                             <li><a href="index.html">Home</a></li>
-                                                <li><a href="services.html">Services</a></li>
-                                                <li><a href="about.html">About Us</a></li>
+                                                <li><a href="#service-tab">Services</a></li>
+                                                <li><a href="#aboutus-tab">About Us</a></li>
                                                 <li><a href="contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
@@ -119,10 +119,8 @@
                                     <nav id="dropdown">
                                         <ul>
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="services.html">Services</a></li>
-                                            <li><a href="shop.html">Shop</a></li>
-                                            <li><a href="news.html">News</a></li>
+                                            <li><a href="#service-tab">Services</a></li>
+                                            <li><a href="#aboutus-tab">About Us</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
