--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                                     <div class="header-top-right">
                                         <ul>
                                             <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#"> 60/3A 9th Ln, Sri Jayawardenepura Kotte </a></li>
-                                            <li><i class="fa fa-phone" aria-hidden="true"></i><a href="Phone:+94112119733"> (+94) 77 952 9268 </a></li>
+                                            <li><i class="fa fa-whatsapp" aria-hidden="true"></i><a href="https://wa.me/+94779529268"> (+94) 77 952 9268 </a></li>
+                                            <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+94779529268"> (+94) 77 952 9268 </a></li>
                                             <li><button class="btn-submit" type="submit">Contact Us </button></li>
                                         </ul>
                                     </div>
@@ -445,8 +446,8 @@
                                 <div class="footer-box">
                                     <h3>Contact US</h3>
                                     <ul class="corporate-address">
-                                        <li><i class="fa fa-whatsapp" aria-hidden="true"></i><a href="">(+94) 77 952 9268</a></li>
-                                        <li><i class="fa fa-phone" aria-hidden="true"></i><a href="">(+94) 77 952 9268</a></li>
+                                        <li><i class="fa fa-whatsapp" aria-hidden="true"></i><a href="https://wa.me/+94779529268">(+94) 77 952 9268</a></li>
+                                        <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+94779529268">(+94) 77 952 9268</a></li>
                                         <li><i class="fa fa-map-marker" aria-hidden="true"></i><a href="#" class="text-white"> 60/3A 9th Ln,<br> Sri Jayawardenepura Kotte </a></li>
                                     </ul>
                                 </div>
